# nasa-wallpaper

./: .gitignore  Cargo.toml  INSTALL  README.md  UNINSTALL  _config.yml  nasa-wallpaper  nasa-wallpaper.1  nasa-wallpaper_1.0_all.deb  sonar-project.properties
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: MacOS  build.yml  ci.yml  linux-build.yml  macos-build.yml  rust.yml  win.yml  windows-build.yml
aur/: .SRCINFO  PKGBUILD
debian/: README.md  nasa-wallpaper.sh
src/: api.rs  main.rs  models.rs  text_renderer.rs  utils.rs
vagrant-boxes/mint-cinnamon-22/: Vagrantfile
