[package]
name = "nasa-wallpaper"
description = "Change your desktop background with a NASA image"
version = "2.2.0"
authors = ["David Población Criado <davidpblcrd@protonmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/davidpob99/nasa-wallpaper"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wallpaper = "3.2"
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rand = "0.9"
anyhow = "1.0"
thiserror = "2.0"
