[package]
name = "nasa-wallpaper"
description = "Change your desktop background with a NASA image"
version = "2.1.3"
authors = ["David Población Criado <davidpblcrd@protonmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/davidpob99/nasa-wallpaper"

[dependencies]
clap = "4.5.54"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1.0.228"
serde_derive = "1.0.203"
wallpaper = { package = "wallpaper-ng", version = "0.1.0", features = ["from_url"]}
colored = "3.0.0"
chrono = "0.4.42"
chrono-tz = "0.10.4"
json = "0.12.4"
rand = "0.9.2"
